comments, minor fixes
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>